Update 'go-cjtdzsmt' component image to: quay.io/rhtap_qe/go-cjtdzsmt:741000feb57182291479ac69826dfd65ec5de3a2@sha256:23c80997d14128f4e70224642dc21e4a43dd1a03dcc317ad52a1fe22d598179d

--- a/components/go-cjtdzsmt/overlays/development/deployment-patch.yaml
+++ b/components/go-cjtdzsmt/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-cjtdzsmt
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-cjtdzsmt:741000feb57182291479ac69826dfd65ec5de3a2@sha256:23c80997d14128f4e70224642dc21e4a43dd1a03dcc317ad52a1fe22d598179d
+          name: container-image
